--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -8,25 +8,36 @@
     margin-top: 0
   #block-views-block-events-list-block-1
     .views-row
+      display: flex
+      margin-bottom: 9px
+      margin-bottom: 9px
       +legacy-pie-clearfix
       .views-field-field-ev-date
         +x-rem(font-size, 0.8)
       .views-field-field-ev-start-time
         margin-top: 3px
         +x-rem(font-size, 0.75)
-        float: left
+        //float: left
         margin-right: 11px
         text-align: center
+        min-width: 75px
         .date
           background: #888
           color: white
           padding: 1px 6px
         .time
           padding: 2px 0
+          border: 1px solid #ccc
+          border-top: 0
+          line-height: 1.2
       .views-field-title
+        display: flex
         h3
           //font-family: $open-sans
           +x-rem(font-size, 0.95)
+          align-self: flex-start
+          margin-top: 3px
+          margin-bottom: 0
 
   #block-views-block-news-block-1
     .views-row
