--- a/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
+++ b/themes/hsk_zymphonies/sass/includes/_style-mixins.sass
@@ -43,4 +43,24 @@ $divider-line: 1px solid #e5e5e5
   border-top: 0
   padding: 25px 22px 12px
 
+@mixin pagetitle-with-icon
+  margin-left: 100px
+  padding-left: 10px
+  position: relative
+  &:before
+    position: absolute
+    left: -115px
+    bottom: -22px
+    display: block
+    +x-rem(font-size, 4)
+    width: 100px
+    height: 100px
+    line-height: 100px
+    text-align: center
+    +border-radius(55px)
+    background: $primary-color
+    font-family: "fontawesome"
+    content: "\f135"
+    color: white
+
 
