--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -2097,7 +2097,7 @@ footer #block-masquerade {
     color: white; }
   .node-monatsblitz #page-title h1:before {
     background: #6A7BA8;
-      background-content: ""; }
+    content: ""; }
 
 .node-schnellschach #page-title h1 {
   margin-left: 100px;
