--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -187,6 +187,10 @@ nav#block-hsk-footer
             a
               background: $primary-color
               color: white
+            ul
+              li
+                a
+                  background: none
           a
             background: none
             border: none
