--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -7,6 +7,13 @@
   .content_layout
     margin-top: 0
   #block-views-block-events-list-block-1
+    h3
+      color: $grey-text
+      border-bottom: 1px solid $divider-line-color
+    .more-link
+      a
+        +small-grey-links
+        padding-right: 15px
     .views-row
       display: flex
       margin-bottom: 9px
@@ -38,6 +45,7 @@
           align-self: flex-start
           margin-top: 3px
           margin-bottom: 0
+          border: none
 
   #block-views-block-news-block-1
     .views-row
