--- a/themes/hsk_zymphonies/sass/_header.sass
+++ b/themes/hsk_zymphonies/sass/_header.sass
@@ -100,7 +100,10 @@ nav#block-hsk-footer
     border: 1px solid #aaa
 
 #block-views-block-header-slideshow-block-1
+  margin-bottom: -30px
   clear: both
+  .slick-slider
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
