--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -64,9 +64,9 @@
   .view-events-list
     h3
       +x-rem(font-size, 1.25)
-      color: #777
+      color: $grey-text
       margin: 25px 0 10px
-      border-bottom: 1px solid #ccc
+      border-bottom: 1px solid $divider-line-darker-color
       &:first-child
         margin-top: 0
     .views-row
