--- a/themes/hsk_zymphonies/sass/includes/_colors.sass
+++ b/themes/hsk_zymphonies/sass/includes/_colors.sass
@@ -9,6 +9,7 @@ $black: black
 $blue: #6A7BA8
 $grey-background: #888
 $divider-line-color: #e5e5e5
+$divider-line-darker-color: #ccc
 
 $link-color: $orange-text
 $base-text-color: #333
