Masquerade mit lesbarer Schrift

--- a/themes/hsk_zymphonies/sass/_forms.sass
+++ b/themes/hsk_zymphonies/sass/_forms.sass
@@ -9,8 +9,8 @@
       label
         min-width: 125px
 
-footer
-  #block-masquerade
+#block-masquerade
+  input.form-text
     color: #333
 
 /*------------------------------------------- */
