--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1786,7 +1786,7 @@ i.icon {
 .path-user form#user-login-form .form-item label {
   min-width: 125px; }
 
-footer #block-masquerade {
+#block-masquerade input.form-text {
   color: #333; }
 
 /*------------------------------------------- */
