Dezenter Hintergrund für Headerzeile

--- a/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
+++ b/themes/hsk_zymphonies/css/hsk-zymphonies-styles.css
@@ -1514,7 +1514,7 @@ i.icon {
   background: transparent; }
 
 #page-title {
-  background: #ddd;
+  background: #ddd url(../images/figuren.png) right center no-repeat;
   border-top: 5px solid #ccc;
   border-bottom: 5px solid #ccc; }
   #page-title #block-pagetitle {
