--- a/themes/hsk_zymphonies/sass/_front.sass
+++ b/themes/hsk_zymphonies/sass/_front.sass
@@ -67,6 +67,48 @@
     h3
       +x-rem(font-size, 1.2)
 
+  #block-infoblockstartseite1
+    position: relative
+    padding-left: 40px
+    padding-top: 3px
+    h3
+      margin-bottom: 5px
+    &:before
+      position: absolute
+      font-family: Fontawesome
+      content: "\f073"
+      left: 0
+      top: -2px
+      +x-rem(font-size, 1.8)
+
+  #block-infoblockstartseite2
+    position: relative
+    padding-left: 40px
+    padding-top: 3px
+    h3
+      margin-bottom: 5px
+    h3.freizeitheim
+      position: relative
+      &:before
+        position: absolute
+        font-family: Fontawesome
+        content: "\f041"
+        left: -35px
+        top: -5px
+        +x-rem(font-size, 2.3)
+    p.vorsitzender
+      position: relative
+      &:before
+        position: absolute
+        font-family: Fontawesome
+        content: "\f003"
+        left: -40px
+        top: -6px
+        +x-rem(font-size, 1.8)
+
+
+
+
 
 
 
