--- a/themes/hsk_zymphonies/sass/_layout.sass
+++ b/themes/hsk_zymphonies/sass/_layout.sass
@@ -7,7 +7,7 @@
   background: transparent
 
 #page-title
-  background: #ddd url(../images/figuren.png) right center no-repeat
+  background: #ddd url(../images/figuren.png) 5000px center no-repeat
   border-top: 5px solid #ccc
   border-bottom: 5px solid #ccc
   #block-pagetitle
