--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -160,7 +160,7 @@
 
   .page-node-type-team
     .node__content
-      display: flex
+      //display: flex
       .field
         margin-right: 20px
 
