--- a/themes/hsk_zymphonies/sass/_node.sass
+++ b/themes/hsk_zymphonies/sass/_node.sass
@@ -129,6 +129,14 @@
     #info-tabs
       border-right: 0
 
+.page-node-type-team
+  .group-kader
+    .views-field-field-player-image
+      img
+        width: 45px
+        height: auto
+
+
 
 /*------------------------------------------- */
 /*------------------------------------------- */
