--- a/themes/hsk_zymphonies/sass/_views.sass
+++ b/themes/hsk_zymphonies/sass/_views.sass
@@ -4,6 +4,8 @@
 /*------------------------------------------- */
 /*------------------------------------------- */
 .path-frontpage
+  #block-views-block-header-slideshow-block-1.block
+    margin-bottom: 0
   .view-header-slideshow
     .views-row
       position: relative
@@ -138,7 +140,7 @@
       overflow: hidden
       .view-header-slideshow
         .views-row
-          max-height: 450px
+          max-height: 400px
           .views-field-field-sl-text
             position: absolute
             bottom: 20px
@@ -187,7 +189,6 @@
 +breakpoint($breakpoint-desktop)
   .path-frontpage
     #block-views-block-header-slideshow-block-1
-      height: 450px
-
+      max-height: 400px
 
 /* End Media Query Tablet */
